Added some buttons

--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -14,7 +14,7 @@
                 <label>Task</label>
                 <input class="todo" type="text" id="task" placeholder="Enter your Task">
                 <!-- <button class="btn">Add</button> -->
-                <input id="btn" type="submit">
+                <input class="btn" type="submit">
             </form>
             <ul id="tasks"></ul>
         </div>
