--- a/Todolist/index.html
+++ b/Todolist/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 <body>
     <h1>Todo List</h1>
     <div class="container">
@@ -16,7 +16,12 @@
                 <!-- <button class="btn">Add</button> -->
                 <input class="btn" type="submit">
             </form>
-            <ul id="tasks"></ul>
+            <h2 id="h2"></h2>
+            <ul id="tasks">
+            </ul>
+            <h2 id="h21"></h2>
+            <ul id="comp">
+            </ul>
         </div>
     </div>
     <script src="script.js"></script>
